tests/k8s/ns-netpol-test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netpoltest
spec:
  replicas: 3
  selector:
    matchLabels:
      app: netpoltest
  template:
    metadata:
      labels:
        app: netpoltest
    spec:
      containers:
      - name: netpoltest
        image: python:alpine3.14
        command:
          - /bin/ash
          - -c
          - |
              apk add curl
              /usr/local/bin/python -m http.server "8080"
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "1m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: netpoltest
spec:
  selector:
    app: netpoltest
  ports:
  - port: 80
    targetPort: 8080
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
spec:
  podSelector: {}
  policyTypes:
  - Ingress
#---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-namespace-default
# spec:
#   podSelector:   
#     matchLabels:
#       app: netpoltest          
#   policyTypes:     
#   - Ingress
#   ingress:
#   - from:
#     - namespaceSelector:
#         matchLabels:
#           name: default
#     ports:
#     - protocol: TCP
#       port: 80
